replaces all the phonetic 3 es